@@ -165,7 +165,9 @@ o setuidgid: Feature to set additional groups using -g option
 - 30/01/2022
 70. added missing '/' in display
 - 06/03/2022
-71. svps.in
+71. svps.in: fix for FreeBSD (stat command usage)
+- 17/03/2022
+72. qmailctl.sh: Fix restart on FreeBSD
 
 * Sunday 14 February 2021 07:46:33 PM IST
 Release 1.0 Start 09/10/2020
